--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           Look at mi, Dolan iz de cptain now.
         </div>
         <div class="div-block-34">
-          <a href="https://t.me/+SpKkfhRk4alhNDM5" class="button-3 w-button">TELEGRAM</a><a
-            href="https://jup.ag/swap/DOLAN_TBA-SOL" class="button-3 w-button">BUY Dolan Duck</a>
-          <a href="./Dolan_Files/meme web/" class="button-3 w-button">Meme Vault</a>
-          <a href="https://game.dolanduck.io" class="button-3 w-button">Game</a>
+          <a href="https://t.me/DolanDuck_Sui" class="button-3 w-button">TELEGRAM</a><a
+            href="https://movepump.com/token/TBA" class="button-3 w-button">BUY Dolan Duck</a>
+          <a href="" class="button-3 w-button">Meme Vault</a>
+          <a href="" class="button-3 w-button">Game</a>
         </div>
         <div class="text-block-11" style="font-size: 12px">
           CA TBA
@@ -105,8 +105,8 @@
           </div>
         </div>
         <div class="div-block-34">
-          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a
-            href="https://t.me/+SpKkfhRk4alhNDM5" class="button-3 w-button">TELEGRAM</a>
+          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a href="https://t.me/DolanDuck_Sui"
+            class="button-3 w-button">TELEGRAM</a>
         </div>
       </div>
       <div class="div-block-35" style="width:600px;">
@@ -157,7 +157,7 @@
                 rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
               transform-style: preserve-3d;
             " class="heading-16 b _3">
-          SUPPLY: 100 million
+          SUPPLY: 10 million
         </h1>
       </div>
       <div class="div-block-35" style="width: 500px;">
@@ -180,12 +180,12 @@
     </h1>
     <div class="text-block-11">Dolan iz de cptain now. </div>
     <div class="div-block-38">
-      <a href="https://t.me/+SpKkfhRk4alhNDM5" class="button-3 w-button">TELEGRAM</a><a
-        href="https://twitter.com/DolanDuckSol69" class="button-3 w-button">TWITTER</a><a
+      <a href="https://t.me/DolanDuck_Sui" class="button-3 w-button">TELEGRAM</a><a href="https://x.com/DolanDuck_Sui"
+        class="button-3 w-button">X</a><a
         href="https://dexscreener.com/solana/a4xegghwrcyyrnzqhwdaneow9nrodsjdrhewcpcbuk4e"
         class="button-3 w-button">DEXSCREENER</a>
     </div>
-    <div class="text-block-11">info@dolanduck.io</div>
+    <div class="text-block-11">info@dolanducksui.fun</div>
   </section>
 
 
