--- a/index.html
+++ b/index.html
@@ -181,9 +181,7 @@
     <div class="text-block-11">Dolan iz de cptain now. </div>
     <div class="div-block-38">
       <a href="https://t.me/DolanDuck_Sui" class="button-3 w-button">TELEGRAM</a><a href="https://x.com/DolanDuck_Sui"
-        class="button-3 w-button">X</a><a
-        href="https://dexscreener.com/solana/a4xegghwrcyyrnzqhwdaneow9nrodsjdrhewcpcbuk4e"
-        class="button-3 w-button">DEXSCREENER</a>
+        class="button-3 w-button">X</a><a href="https://dexscreener.com/" class="button-3 w-button">DEXSCREENER</a>
     </div>
     <div class="text-block-11">info@dolanducksui.fun</div>
   </section>
