--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
         </div>
         <div class="div-block-34">
           <a href="https://t.me/DolanDuck_Sui" class="button-3 w-button">TELEGRAM</a><a
-            href="https://movepump.com/token/TBA" class="button-3 w-button">BUY Dolan Duck</a>
+            href="https://movepump.com/token/0x48e0a704f83c86f4b80b6cca841e535d8151642839855f0984f088c4d0610bc9::dolan::DOLAN"
+            class="button-3 w-button">BUY Dolan Duck</a>
           <a href="" class="button-3 w-button">Meme Vault</a>
           <a href="" class="button-3 w-button">Game</a>
         </div>
         <div class="text-block-11" style="font-size: 12px">
-          CA TBA
+          CA 0x48e0a704f83c86f4b80b6cca841e535d8151642839855f0984f088c4d0610bc9::dolan::DOLAN
         </div>
       </div>
     </div>
