--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
           Look at mi, Dolan iz de cptain now.
         </div>
         <div class="div-block-34">
-          <a href="https://t.me/DolanDuck_Sui" class="button-3 w-button">TELEGRAM</a><a
-            href="https://movepump.com/token/0x48e0a704f83c86f4b80b6cca841e535d8151642839855f0984f088c4d0610bc9::dolan::DOLAN"
-            class="button-3 w-button">BUY Dolan Duck</a>
+          <a href="https://t.me/DolanDuck_Portal" class="button-3 w-button">TELEGRAM</a><a
+            href="https://movepump.com/token/TBA" class="button-3 w-button">BUY Dolan Duck</a>
           <a href="" class="button-3 w-button">Meme Vault</a>
           <a href="" class="button-3 w-button">Game</a>
         </div>
         <div class="text-block-11" style="font-size: 12px">
-          CA 0x48e0a704f83c86f4b80b6cca841e535d8151642839855f0984f088c4d0610bc9::dolan::DOLAN
+          CA TBA
         </div>
       </div>
     </div>
@@ -106,8 +105,8 @@
           </div>
         </div>
         <div class="div-block-34">
-          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a href="https://t.me/DolanDuck_Sui"
-            class="button-3 w-button">TELEGRAM</a>
+          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a
+            href="https://t.me/DolanDuck_Portal" class="button-3 w-button">TELEGRAM</a>
         </div>
       </div>
       <div class="div-block-35" style="width:600px;">
@@ -181,8 +180,9 @@
     </h1>
     <div class="text-block-11">Dolan iz de cptain now. </div>
     <div class="div-block-38">
-      <a href="https://t.me/DolanDuck_Sui" class="button-3 w-button">TELEGRAM</a><a href="https://x.com/DolanDuck_Sui"
-        class="button-3 w-button">X</a><a href="https://dexscreener.com/" class="button-3 w-button">DEXSCREENER</a>
+      <a href="https://t.me/DolanDuck_Portal" class="button-3 w-button">TELEGRAM</a><a
+        href="https://x.com/DolanDuck_Sui" class="button-3 w-button">X</a><a href="https://dexscreener.com/"
+        class="button-3 w-button">DEXSCREENER</a>
     </div>
     <div class="text-block-11">info@dolanducksui.fun</div>
   </section>
