--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           Look at mi, Dolan iz de cptain now.
         </div>
         <div class="div-block-34">
-          <a href="https://t.me/DolanDuckSui" class="button-3 w-button">TELEGRAM</a><a
+          <a href="https://t.me/DolanSui_Portal" class="button-3 w-button">TELEGRAM</a><a
             href="https://movepump.com/token/TBA" class="button-3 w-button">BUY Dolan Duck</a>
           <a href="" class="button-3 w-button">Meme Vault</a>
           <a href="" class="button-3 w-button">Game</a>
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="div-block-34">
-          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a href="https://t.me/DolanDuckSui"
+          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a href="https://t.me/DolanSui_Portal"
             class="button-3 w-button">TELEGRAM</a>
         </div>
       </div>
@@ -180,7 +180,7 @@
     </h1>
     <div class="text-block-11">Dolan iz de cptain now. </div>
     <div class="div-block-38">
-      <a href="https://t.me/DolanDuckSui" class="button-3 w-button">TELEGRAM</a><a href="https://x.com/DolanDuck_Sui"
+      <a href="https://t.me/DolanSui_Portal" class="button-3 w-button">TELEGRAM</a><a href="https://x.com/DolanDuck_Sui"
         class="button-3 w-button">X</a><a href="https://dexscreener.com/" class="button-3 w-button">DEXSCREENER</a>
     </div>
     <div class="text-block-11">info@dolanducksui.fun</div>
