--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
         </div>
         <div class="div-block-34">
           <a href="https://t.me/DolanSui_Duck" class="button-3 w-button">TELEGRAM</a><a
-            href="https://movepump.com/token/TBA" class="button-3 w-button">BUY Dolan Duck</a>
+            href="https://movepump.com/token/0x4ffc8e83904b6f33112d8271ceb665125e35f28cf687b071f6613046dff3411f::dolanf::DOLANF"
+            class="button-3 w-button">BUY Dolan Duck</a>
           <a href="" class="button-3 w-button">Meme Vault</a>
           <a href="" class="button-3 w-button">Game</a>
         </div>
         <div class="text-block-11" style="font-size: 12px">
-          CA TBA
+          CA 0x4ffc8e83904b6f33112d8271ceb665125e35f28cf687b071f6613046dff3411f::dolanf::DOLANF
         </div>
       </div>
     </div>
