--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
       </div>
       <div class="div-block-33">
         <h1 data-w-id="b8e01f29-912e-a68d-536e-5e355d91a79a" class="heading-16" style="text-align: center;">
-          Dolan Duck
+       Dolan Duck On Pulse
         </h1>
         <div data-w-id="16f9c767-4a24-818b-f1ba-872175ab75b9" class="text-block-10">
           Look at mi, Dolan iz de cptain now.
         </div>
         <div class="div-block-34">
-          <a href="https://t.me/DolanPulse_Duck" class="button-3 w-button">TELEGRAM</a><a
+          <a href="https://t.me/DolanDuck_PLSX" class="button-3 w-button">TELEGRAM</a><a
             href="https://pump.tires/token/TBA"
-            class="button-3 w-button">BUY Dolan Duck</a>
+            class="button-3 w-button">BUY Dolan</a>
           <a href="" class="button-3 w-button">Meme Vault</a>
           <a href="" class="button-3 w-button">Game</a>
         </div>
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="div-block-34">
-          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a href="https://t.me/DolanPulse_Duck"
+          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a href="https://t.me/DolanDuck_PLSX"
             class="button-3 w-button">TELEGRAM</a>
         </div>
       </div>
@@ -177,11 +177,11 @@
             rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
           transform-style: preserve-3d;
         ">
-      Dolan Duck
+      Dolan Duck On Pulse
     </h1>
     <div class="text-block-11">Dolan iz de cptain now. </div>
     <div class="div-block-38">
-      <a href="https://t.me/DolanPulse_Duck" class="button-3 w-button">TELEGRAM</a><a href="https://x.com/DolanDuck_Pulse"
+      <a href="https://t.me/DolanDuck_PLSX" class="button-3 w-button">TELEGRAM</a><a href="https://x.com/DolanDuck_PLSX"
         class="button-3 w-button">X</a><a href="https://dexscreener.com/" class="button-3 w-button">DEXSCREENER</a>
     </div>
     <div class="text-block-11">info@dolanduckpulse.xyz</div>
