--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         </div>
         <div class="div-block-34">
           <a href="https://t.me/DolanDuck_PLSX" class="button-3 w-button">TELEGRAM</a><a
-            href="https://pump.tires/token/TBA"
+            href="https://pump.tires/token/0x0AF0b6233C2a7fd599a3d121112D1A954cA3854C"
             class="button-3 w-button">BUY Dolan</a>
           <a href="" class="button-3 w-button">Meme Vault</a>
           <a href="" class="button-3 w-button">Game</a>
         </div>
         <div class="text-block-11" style="font-size: 12px">
-          CA TBA
+          CA: 0x0AF0b6233C2a7...1A954cA3854C
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="div-block-34">
-          <a href="https://www.coingecko.com/" class="button-3 w-button">CHART</a><a href="https://t.me/DolanDuck_PLSX"
+          <a href="https://pump.tires/token/0x0AF0b6233C2a7fd599a3d121112D1A954cA3854C" class="button-3 w-button">CHART</a><a href="https://t.me/DolanDuck_PLSX"
             class="button-3 w-button">TELEGRAM</a>
         </div>
       </div>
